Fix scrollbar showing over content

--- a/content/popup.css
+++ b/content/popup.css
@@ -135,6 +135,7 @@
   margin-top: 6px;
   max-height: 14rem;
   overflow-y: auto;
+  padding-right: 10px;
 }
 
 .status {
